[package]
name = "subduction_crypto"
version = "0.5.0"
description = "Cryptographic types for Subduction: signed payloads, verification witnesses"

authors.workspace = true
categories = ["cryptography"]
edition.workspace = true
keywords = ["cryptography", "signatures", "ed25519"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
ed25519-dalek = { workspace = true, features = ["zeroize"] }
future_form = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
sedimentree_core = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true, optional = false, features = ["derive"] }
blake3 = { workspace = true, features = ["std"] }
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
criterion_pprof = { workspace = true }
ed25519-dalek = { workspace = true, features = ["batch", "rand_core", "std"] }
futures = { workspace = true, features = ["executor"] }
rand = { workspace = true, features = ["std", "std_rng"] }
sedimentree_core = { workspace = true, features = ["std", "test_utils"] }
siphasher = { workspace = true, features = ["std"] }
subduction_bench_support = { workspace = true, features = ["criterion_harness"] }
subduction_crypto = { path = ".", features = ["bolero", "std", "test_utils"] }
testresult = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "crypto"
harness = false

[features]
default = []
arbitrary = ["dep:arbitrary", "std"]
bolero = ["dep:bolero", "arbitrary", "std"]
serde = ["dep:serde", "ed25519-dalek/serde"]
std = [
  "ed25519-dalek/std",
  "sedimentree_core/std",
  "serde/std",
  "thiserror/std"
]
# Test and bench utilities: deterministic signer construction from a u64 seed.
test_utils = ["std"]

[lints]
workspace = true
