[package]
name = "subduction_ephemeral"
version = "0.1.0"
description = "Ephemeral (non-persisted) messaging for Subduction"

categories = ["web-programming"]
keywords = ["sync", "subduction", "ephemeral"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel = { workspace = true }
async-lock = { workspace = true }
bijou64 = { workspace = true }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
future_form = { workspace = true }
futures = { workspace = true }
nonempty = { workspace = true }
sedimentree_core = { workspace = true }
subduction_core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-lock = { workspace = true }
subduction_core = { workspace = true, features = ["std", "test_utils"] }
subduction_ephemeral = { path = ".", features = ["std"] }
testresult = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[dependencies.keyhive_core]
workspace = true
optional = true

[dependencies.rand]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.subduction_keyhive]
workspace = true
optional = true
features = ["policy"]

[features]
default = []
bolero = ["dep:bolero", "sedimentree_core/bolero", "std"]
keyhive = ["dep:keyhive_core", "dep:rand", "dep:serde", "dep:subduction_keyhive"]
std = [
  "async-channel/std",
  "async-lock/std",
  "futures/std",
  "nonempty/std",
  "sedimentree_core/std",
  "subduction_core/std",
  "thiserror/std",
]

[lints]
workspace = true
