[package]
name = "subduction_ephemeral"
version = "0.6.2"
description = "Ephemeral (non-persisted) messaging for Subduction"

categories = ["web-programming"]
keywords = ["sync", "subduction", "ephemeral"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel = { workspace = true }
async-lock = { workspace = true }
bijou64 = { workspace = true }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
future_form = { workspace = true }
futures = { workspace = true }
nonempty = { workspace = true }
sedimentree_core = { workspace = true }
subduction_core = { workspace = true }
subduction_crypto = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
async-lock = { workspace = true }
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
ed25519-dalek = { workspace = true, features = ["std"] }
futures = { workspace = true, features = ["executor"] }
getrandom = { workspace = true }
subduction_core = { workspace = true, features = ["std", "test_utils"] }
subduction_crypto = { workspace = true, features = ["std"] }
subduction_ephemeral = { path = ".", features = ["std", "test_utils", "bolero"] }
testresult = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[[bench]]
name = "recv_dedup"
harness = false

[features]
default = []
bolero = ["dep:bolero", "sedimentree_core/bolero", "std"]
test_utils = []
std = [
  "async-channel/std",
  "async-lock/std",
  "futures/std",
  "nonempty/std",
  "sedimentree_core/std",
  "subduction_core/std",
  "subduction_crypto/std",
  "thiserror/std",
]

[lints]
workspace = true
