[package]
name = "subduction_http_long_poll"
version = "0.2.0"
description = "HTTP long-polling transport layer for the Subduction sync protocol"

categories = ["web-programming"]
keywords = ["http", "long-polling", "sync", "subduction"]
publish = false
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-channel = { workspace = true }
async-lock = { workspace = true }
base58 = { workspace = true }
futures = { workspace = true }
future_form = { workspace = true }
getrandom = { workspace = true }
minicbor = { workspace = true }
sedimentree_core = { workspace = true }
subduction_core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Client dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
tokio = { workspace = true, features = ["time", "sync"], optional = true }

# Server dependencies
axum = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
sedimentree_core = { workspace = true, features = ["arbitrary", "serde", "std"] }
subduction_core = { workspace = true, features = ["std"] }
testresult = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "std"] }

[features]
default = ["client", "server"]
client = ["dep:reqwest", "dep:tokio", "std"]
server = ["dep:axum", "dep:tokio", "std"]
std = [
  "async-channel/std",
  "async-lock/std",
  "futures/std",
  "minicbor/std",
  "sedimentree_core/std",
  "subduction_core/std",
  "thiserror/std",
  "tracing/std",
  "url/std",
]

[lints]
workspace = true
