[package]
name = "subduction_keyhive"
version = "0.1.0"
description = "Keyhive protocol"

categories = ["web-programming"]
keywords = ["sync", "subduction"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
async-lock = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
future_form = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, optional = true }
keyhive_core = { workspace = true }
minicbor = { workspace = true }
minicbor-serde = { workspace = true }
rand = "0.8.5"
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"], optional = true }
tracing = { workspace = true }

[features]
default = []
arbitrary = ["dep:arbitrary"]
fs = ["std", "dep:tokio"]
serde = ["dep:serde"]
std = ["thiserror/std", "dep:hex"]

[dev-dependencies]
async-channel = { workspace = true }
nonempty = "0.10.0"
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
