[package]
name = "subduction_keyhive"
version = "0.6.0"
description = "Keyhive protocol"

categories = ["web-programming"]
keywords = ["sync", "subduction"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel = { workspace = true, optional = true }
async-lock = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
ciborium = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
futures = { workspace = true }
future_form = { workspace = true }
subduction_core = { workspace = true }
subduction_crypto = { workspace = true, optional = true }
keyhive_core = { workspace = true }
keyhive_crypto = { workspace = true }
sedimentree_core = { workspace = true }
rand = "0.8.5"
tokio = { workspace = true, optional = true, features = ["rt", "sync", "time"] }
tokio-util = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_bytes = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
bolero = ["dep:bolero"]
handler = ["dep:async-channel", "dep:subduction_crypto", "std"]
runtime = ["handler", "serde", "dep:tokio", "dep:tokio-util"]
serde = ["dep:serde", "dep:serde_bytes", "dep:serde_json", "std"]
std = ["thiserror/std"]
test-utils = ["dep:async-channel", "serde"]

[dev-dependencies]
async-channel = { workspace = true }
nonempty = "0.10.0"
subduction_core = { workspace = true, features = ["std", "test_utils"] }
subduction_crypto = { workspace = true }
testresult = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
